--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "pg": "^8.7.3",
+    "pg": "^8.8.0",
     "supertest": "^6.3.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all", "jest-sorted"
+      "jest-extended/all",
+      "jest-sorted"
     ]
   }
 }
